# tunacode

./: .agentignore  .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_SMALL_WINS_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  ESC_KEY_STREAMING_ANALYSIS.md  HARNESS.md  Makefile  NOTES.md  PLAN.md  PNPM.md  README.md  REPORT.md  TODO.md  architect_refactor_plan.md  cliff.toml  demo_architect_nlp.py  dspyremoval.md  handoff.md  layers.dot  new_prompt.xml  package-lock.json  package.json  plan.md  prompt-xml.md  pyproject.toml  pytest.ini  quick_search_test.py  test_architect_search.py  test_nlp_architect_search.py  test_orchestrator_fix.py  test_slash_commands.py  tool_unification_plan.md  web_fetch_refactoring_analysis.md  whitelist.py
.claude/: JOURNAL.md  manifest.json  manifest.md
.github/: dependabot.yml  pull_request_template.md
.pre-commit-cache/: db.db  patch1758220284-854989  patch1758227281-905451
.tickets/: t-ea8a.md  tun-386a.md  tun-41f6.md  tun-7099.md  tun-7395.md  tun-8168.md  tun-a07e.md  tun-dcb8.md  tun-fb61.md
benchmarks/: run_benchmark.py
docs/: CLA.md  CONTRIBUTING.md  PYDANTIC_TOOL_INTEGRATION.md  README.md  TDD_TOKEN_TRACKING_SPEC.md  TOOL_UNIFICATION.md  advanced.md  agent-loop-map.html  authentication.md  config.md  contributing.md  custom-providers.md  deadcode.md  experimental.md  faq.md  getting-started.md  install.md  open-source-fund.md  openai_tool_schemas.json  openai_tool_schemas.md  platform-sandboxing.md  prompts.md  release_management.md  sandbox.md  zdr.md
documentation/: README.md  lazy-file-reading-architecture.md  orchestrator-primary-request-fix.md
plan/: todo-prompt-loading-simplification.md
prime-rl/: README.md
reports/: SMALL_WINS_AUDIT.md  discover-benchmark-case-study.html
scripts/: check-file-length.sh  check-flaky-tests.py  check-unused-constants.py  check_ast_grep_baseline.py  check_markdown_frontmatter.py  check_stale_symbol_surfaces.py  check_unused_modules.py  compare-upstream.sh  generate_training_data.py  preview_tool_panels.py  pydantic_usage_baseline.json  pydantic_usage_report.py  run_ast_grep_checks.sh  stale_symbol_surfaces_analysis.py  stale_symbol_surfaces_models.py  stale_symbol_surfaces_visitors.py  todo_scanner.py  update_models_registry.sh  validate_ast_grep_rules.py  validate_training.py
tests/: SLASH_COMMAND_TESTS.md  __init__.py  conftest.py  (+40 more)
tinyAgent/: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
tinyAgent/bindings/alchemy_llm_py/: Cargo.toml  pyproject.toml
tinyAgent/bindings/alchemy_llm_py/src/: lib.rs
tinyAgent/docs/: ARCHITECTURE.md  README.md
tinyAgent/docs/api/: README.md  agent.md  agent_loop.md  agent_tool_execution.md  agent_types.md  providers.md
tinyAgent/examples/: example_chat.py  example_chat_alchemy.py  example_chat_stream_text.py
tinyAgent/scripts/: lint_architecture.py  lint_file_length.py
tinyAgent/tinyagent/: __init__.py  agent.py  agent_loop.py  agent_tool_execution.py  agent_types.py  alchemy_provider.py  openrouter_provider.py  proxy.py  proxy_event_handlers.py
tunacode-rs/app-server/: Cargo.toml
tunacode-rs/app-server/src/: fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  tunacode_message_processor.rs
tunacode-rs/app-server/tests/common/: Cargo.toml  lib.rs  mcp_process.rs
tunacode-rs/app-server/tests/suite/: archive_conversation.rs  auth.rs  config.rs  create_conversation.rs  fuzzy_file_search.rs  interrupt.rs  list_resume.rs  login.rs  mod.rs  send_message.rs  set_default_model.rs  tunacode_message_processor_flow.rs  user_agent.rs  user_info.rs
tunacode-rs/arg0/: Cargo.toml
tunacode-rs/arg0/src/: lib.rs
tunacode-rs/backend-client/: Cargo.toml
tunacode-rs/backend-client/src/: client.rs  types.rs
tunacode-rs/chatgpt/: Cargo.toml  README.md
tunacode-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  get_task.rs
tunacode-rs/chatgpt/tests/: task_turn_fixture.json
tunacode-rs/chatgpt/tests/suite/: apply_command_e2e.rs
tunacode-rs/cli/: Cargo.toml
tunacode-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  proto.rs
tunacode-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
tunacode-rs/exec/: Cargo.toml
tunacode-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_json_output.rs  exec_events.rs  experimental_event_processor_with_json_output.rs  lib.rs  main.rs
tunacode-rs/exec/tests/: event_processor_with_json_output.rs
tunacode-rs/exec/tests/suite/: apply_patch.rs  output_schema.rs  resume.rs  sandbox.rs  server_error_exit.rs
tunacode-rs/file-search/: Cargo.toml  README.md
tunacode-rs/file-search/src/: main.rs
tunacode-rs/ollama/: Cargo.toml
tunacode-rs/ollama/src/: client.rs  lib.rs
tunacode-rs/protocol-ts/: Cargo.toml
tunacode-rs/protocol-ts/src/: lib.rs  main.rs
tunacode-rs/tui/: Cargo.toml  styles.md
tunacode-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  app_event_sender.rs  chatwidget.rs  citation_regex.rs  cli.rs  clipboard_paste.rs  diff_render.rs  file_search.rs  frames.rs  get_git_diff.rs  history_cell.rs  lib.rs  main.rs  markdown.rs  markdown_stream.rs  pager_overlay.rs  resume_picker.rs  session_log.rs  slash_command.rs  status_indicator_widget.rs  text_formatting.rs  updates.rs  version.rs
tunacode-rs/tui/src/bottom_pane/: approval_overlay.rs  bash_command_popup.rs  chat_composer.rs  chat_composer_history.rs  command_popup.rs  file_search_popup.rs  list_selection_view.rs  mod.rs  prompt_args.rs
tunacode-rs/tui/src/chatwidget/: agent.rs  interrupts.rs  tests.rs
tunacode-rs/tui/src/exec_cell/: model.rs  render.rs
tunacode-rs/tui/src/onboarding/: auth.rs  onboarding_screen.rs  trust_directory.rs  welcome.rs
tunacode-rs/tui/src/public_widgets/: composer_input.rs
tunacode-rs/tui/src/render/: highlight.rs
tunacode-rs/tui/src/status/: card.rs  helpers.rs  rate_limits.rs  tests.rs
tunacode-rs/tui/src/streaming/: controller.rs
tunacode-rs/tui/tests/suite/: status_indicator.rs  vt100_history.rs  vt100_live_commit.rs
(+1224 files in other folders)
