[package]
edition = "2024"
name = "tunacode-arg0"
version = { workspace = true }

[lib]
name = "tunacode_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tunacode-apply-patch = { workspace = true }
tunacode-core = { workspace = true }
tunacode-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
