[package]
edition = "2024"
name = "tunacode-chatgpt"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tunacode-common = { workspace = true, features = ["cli"] }
tunacode-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tunacode-git-apply = { path = "../git-apply" }

[dev-dependencies]
tempfile = { workspace = true }
