[package]
name = "alchemy_llm_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "alchemy_llm_py"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.27", features = ["extension-module"] }
pythonize = "0.27"

# Runtime
once_cell = "1.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The Rust LLM abstraction
alchemy-llm = "0.1.1"
